FIXED: Flickering pfp on profile page

--- a/src/pages/ProfilePage/components/ProfileHead/ProfileHead.module.scss
+++ b/src/pages/ProfilePage/components/ProfileHead/ProfileHead.module.scss
@@ -15,17 +15,15 @@
 			margin-right: 1rem;
 			.pfp {
 				position: relative;
-				width: 4rem;
-				height: 4rem;
 				img {
-					width: 100%;
-					height: 100%;
+					width: 4rem;
+					height: 4rem;
 					border-radius: $content-border-radius;
 					object-fit: cover;
 				}
 				svg {
-					width: 100%;
-					height: 100%;
+					width: 4rem;
+					height: 4rem;
 					padding: 1rem;
 					color: var(--text-title);
 					border-radius: $content-border-radius;
